rodcast.github.com

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <meta name="robots" content="noarchive" />
 <meta name="revisit-after" content="7 days" />
 <meta name="MSSmartTagsPreventParsing" content="true" />
-<base href="http://rodrigocastilho.com/" />
+<base href="http://www.rodrigocastilho.com/" />
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <link href="/apple-touch-icon.png" rel="apple-touch-icon" />
-<link href="http://rodrigocastilho.com" rel="start" />
+<link href="http://www.rodrigocastilho.com/" rel="start" />
 <link href="/css/rodcast-min.css" rel="stylesheet" type="text/css" />
-<link rel="canonical" href="http://rodrigocastilho.com/" />
+<link rel="canonical" href="http://www.rodrigocastilho.com/" />
 </head>
 <body style="background:none">
 
