rodcast.github.com (repository)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Rodrigo Castilho aka RODCAST | GitHub User Page</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="title" content="Rodrigo Castilho aka RODCAST | Front End Engineer and SEO Specialist" />
-<meta name="description" content="Rodrigo Castilho aka RODCAST, Front End Engineer and SEO Specialist, Brazilian, 29 years old." />
+<meta name="description" content="Rodrigo Castilho aka RODCAST, Front End Engineer and SEO Specialist, Brazilian, 32 years old." />
 <meta name="keywords" content="rodrigo, castilho, rodcast, xhtml, html, css, seo, javascript, ajax, web" />
 <meta name="robots" content="index,follow" />
 <meta name="robots" content="noodp" />
@@ -41,7 +41,7 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 <script>
-jQuery.getJSON("http://github.com/api/v2/json/repos/show/rodcast", function(data) {
+jQuery.getJSON("http://github.com/api/v2/json/repos/show/rodcast?callback=?", function(data) {
 	if (data !== null && data.length) {
 		var
 			name, description, url,
