--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ jQuery.getJSON("http://github.com/api/v2/json/repos/show/rodcast?callback=?", fu
 			description = repository.description;
 			url = repository.url;
 
-			rows.push('<li><strong><a title="',  name, '" href="',  url, '" target="_blank" rel="external">', name, '</a></strong>');
-			rows.push('<div class="description">', description, '</div></li>');
+			rows.push('<li><strong><a title="' +  name + '" href="' +  url + '" target="_blank" rel="external">' + name + '</a></strong>' +
+			'<div class="description">' + description + '</div></li>');
 		});
 
 		$("#repo_listing").empty().append(rows.reverse().join(""));
