rodcast.github.com (loading / refactor)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 				<h2 id="github-title"><span class="title">My projects on Github (<a href="http://github.com/rodcast" target="blank" rel="external">rodcast</a>)</span></h2>
 				<div class="body">
 					<div class="repos">
-						<ul id="repo_listing"></ul>
+						<ul id="repo_listing">
+							<li><strong>Loading...</strong></li>
+						</ul>
 					</div>
 				</div>
 			</div>
