--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	</div>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 <script>
-jQuery.getJSON("http://github.com/api/v2/json/repos/show/rodcast?callback=?", function(data) {
+$.getJSON("http://github.com/api/v2/json/repos/show/rodcast?callback=?", function(data) {
 	if (data !== null && data.repositories.length) {
 		var
 			name, description, url,
