--- a/facebook-rate.html
+++ b/facebook-rate.html
@@ -26,24 +26,19 @@
 		});
 
 		function authFacebookAccount() {
-		  FB.getLoginStatus(function(response) {
-			if (response.status === 'connected') {         
+			FB.login(function(response) {
 			  getMyGender();
-			} else if (response.status === 'not_authorized') {
-			  FB.login(function(response) {
-				getMyGender();
-			  });
-			} else {
-			  FB.login(function(response) {
-				consol.log('FB.login');
-			  });
-			}
-		  });
+			});
 		}
 	
 		function getMyGender() {
 		  FB.api('/me', function (response) {
+			console.log(response);
 			getFriendsList(response.gender);
+		  });
+		  
+		  FB.api('/me/picture', function (response) {
+			console.log(response);
 		  });
 		}
 	
