--- a/facebook-rate.html
+++ b/facebook-rate.html
@@ -67,6 +67,8 @@
 		}
 
 		$('a[data-album]').on('click', function(event) {
+			
+			debugger;
 			event.preventDefault();
 
 			getPhotos($(this).data('album'));
