--- a/facebook-rate.html
+++ b/facebook-rate.html
@@ -88,7 +88,8 @@
 	
 				FB.ui({
 					method: 'feed',
-					message: 'What do you think about the picture?',
+					caption: 'What do you think about this picture?',
+					description: 'You say what you think about me provided that it\'s COOL because otherwise I get upset.',
 					picture: 'https://dl.dropbox.com/s/9845s1avkpk7qbk/du5.jpg'
 				}, function(response) {
 					if (!response) {
