--- a/facebook-rateme.html
+++ b/facebook-rateme.html
@@ -7,6 +7,8 @@
 	<title>RODCAST</title>
 
 	<meta name="viewport" content="width=device-width">
+	  
+	<link href="css/normalize.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
