--- a/facebook-rateme.html
+++ b/facebook-rateme.html
@@ -91,6 +91,7 @@
 				FB.ui({
 					method: 'send',
 					name: 'You say what you think about me provided that it\'s COOL.',
+					link: imgURL
 				}, function(response) {
 					if (!response) {
 						alert('Error!');
