--- a/facebook-rateme.html
+++ b/facebook-rateme.html
@@ -13,15 +13,17 @@
 </head>
 <body>
 
-<section>
-  <nav>
-	<ul id="albums"></ul>
-  </nav>
-  
-  <article>
-	<div id="photos"></div>
-  </article>
-</section>
+  <section id="container">
+	<nav>
+	  <h2>Albums</h2>
+	  <ul id="albums"></ul>
+	</nav>
+	
+	<article>
+	  <h2>Photos</h2>
+	  <div id="photos">There's photo.</div>
+	</article>
+  </section>
   
   <div id="fb-root"></div>
   
