--- a/facebook-rateme.html
+++ b/facebook-rateme.html
@@ -90,7 +90,7 @@
 		}
 
 		function showPhotos() {
-			$('#photos').html('').append(photosList.join(""));
+			$('#photos').html('').append(photosList.sort().reverse().join(""));
 			
 			photosList = [];
 		}
